# MONAIStream

./: .gitattributes  .gitignore  .readthedocs.yml  ConvertTRT.md  Dockerfile.base  Dockerfile.devel  Dockerfile.test  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.sh  setup.cfg  setup.py  start_devel.sh
.azure/: azure-test-gpu-pipeline  azure-test-gpu-pipeline.yml
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: agx.yaml  codecov.yml  pr.yml  release.yml  x86-gpu-test.yml
configs/: config_unet_pytorch_nopostprocess.txt  config_unet_trt_nopostprocess.txt
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  developerguide.rst  index.rst  installation.rst
lib/: LICENSE
models/monai_unet_onnx/: README.md  model_unet_pyt_folded.onnx
models/monai_unet_pytorch/: config.pbtxt
models/monai_unet_trt/: config.pbtxt
plugins/gst/python/: usercallbacktransform_py.py
sample/cupy-app/: README.md  deepstream_cupy_monai_unet.py
sample/monai-stream-app/: main.py
sample/monaistream-cupy-pp-app/: main.py
sample/monaistream-pytorch-pp-app/: main.py
sample/monaistream-rdma-capture-app/: main.py
sample/monaistream-us-cupy-app/: main.py
scripts/: README.md  convert_pytorch2onnx.py
src/monai/stream/: __init__.py  compose.py  errors.py  interface.py
src/monai/stream/filters/: __init__.py  convert.py  infer.py  nvstreammux.py  transform.py
src/monai/stream/sinks/: __init__.py  fake.py  tensor.py
src/monai/stream/sources/: sourcebin.py  uri.py
src/monaistream/: __init__.py  _version.py  compose.py  errors.py  interface.py  logging.json
src/monaistream/filters/: __init__.py  convert.py  infer.py  nvstreammux.py  transform.py  transform_cupy.py  util.py
src/monaistream/sinks/: __init__.py  fake.py  nveglglessink.py  tensor.py
src/monaistream/sources/: __init__.py  ajavideosrc.py  fake.py  sourcebin.py  testvideosrc.py  uri.py
src/monaistream/util/: __init__.py  convert.py  entry.py
src/utils/: convert_pytorch2onnx.py
tests/: monaistream-us-cupy-pp-test.py  monaistream-us-cupy-pp.test.py
tests/models/identity/: config.pbtxt
tests/models/identity/1/: model.py
tests/regression/: __init__.py  test_data.py  test_fake.py  test_src.py
