[metadata]
name = monaistream
author = MONAI Consortium
author_email = monai.contact@gmail.com
url = https://monai.io/
description = Streaming Inference Extension for MONAI
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
license = Apache License 2.0
license_files =
    LICENSE
project_urls =
    Documentation=https://docs.monai.io/
    Bug Tracker=https://github.com/Project-MONAI/MONAIStream/issues
    Source Code=https://github.com/Project-MONAI/MONAIStream

[options]
python_requires = >= 3.6
packages = find:
package_dir =
    =src
# for compiling and develop setup only
# no need to specify the versions so that we could
# compile for multiple targeted versions.
setup_requires =
    torch
    ninja
install_requires =
    monai[skimage, pillow, gdown, torchvision, itk, psutil]==0.7.0

[options.packages.find]
where = src
include = monaistream
exclude = utils

[flake8]
select = B,C,E,F,N,P,T4,W,B9
max_line_length = 120
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore =
    E203,E305,E402,E501,E721,E741,F821,F841,F999,W503,W504,C408,E302,W291,E303,B008,
    # N812 lowercase 'torch.nn.functional' imported as non lowercase 'F'
    N812,N818
per_file_ignores = __init__.py: F401, F403
exclude =
    *.pyi,
    .git,
    .eggs,
    _version.py,
    versioneer.py,
    venv,
    .venv,
    config.py,
    plugins,
    pyds,
    src/monaistream/_version.py

[isort]
known_first_party = monaistream
profile = black
line_length = 120
skip =
    .git,
    .eggs,
    venv,
    .venv,
    versioneer.py,
    _version.py,
    conf.py,
    plugins,
    pyds,
    __pycache__,
    src/monaistream/_version.py,
    src/monaistream/filters/__init__.py
skip_glob = *.pyi

[versioneer]
VCS = git
style = pep440
versionfile_source = src/monaistream/_version.py
versionfile_build = src/monaistream/_version.py
tag_prefix =
parentdir_prefix =

[mypy]
# Suppresses error messages about imports that cannot be resolved.monaistream
ignore_missing_imports = True
# Changes the treatment of arguments with a default value of None by not implicitly making their type Optional.
no_implicit_optional = True
# Warns about casting an expression to its inferred type.
warn_redundant_casts = True
# No error on unneeded # type: ignore comments.
warn_unused_ignores = False
# Shows a warning when returning a value with type Any from a function declared with a non-Any return type.
warn_return_any = True
# Prohibit equality checks, identity checks, and container checks between non-overlapping types.
strict_equality = True
# Shows column numbers in error messages.
show_column_numbers = True
# Shows error codes in error messages.
show_error_codes = True
# Use visually nicer output in error messages: use soft word wrap, show source code snippets, and show error location markers.
pretty = False
# list of files or directories to exclude.
exclude = (plugins|docs|model|pyds)

[mypy-versioneer]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-monaistream._version]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-monaistream.eggs]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-monaistream.compose]
# Ignores all non-fatal errors.
ignore_errors = True


[pytype]
# Space-separated list of files or directories to exclude.
exclude = versioneer.py _version.py scripts plugins pyds 
# Space-separated list of files or directories to process.
inputs = src/monaistream
# Keep going past errors to analyze as many files as possible.
keep_going = True
# Run N jobs in parallel.
jobs = 8
# All pytype output goes here.
output = .pytype
# Paths to source code directories, separated by ':'.
pythonpath = .
# Check attribute values against their annotations.
check_attribute_types = True
# Check container mutations against their annotations.
check_container_types = True
# Check parameter defaults and assignments against their annotations.
check_parameter_types = True
# Check variable values against their annotations.
check_variable_types = True
# Comma or space separated list of error names to ignore.
disable = pyi-error
# Report errors.
report_errors = True
# Experimental: Infer precise return types even for invalid function calls.
precise_return = True
# Experimental: solve unknown types to label with structural types.
protocols = True
# Experimental: Only load submodules that are explicitly imported.
strict_import = False

[coverage:run]
concurrency = multiprocessing
source = .
data_file = .coverage/.coverage
omit =
    tests/*
    sample/*
    versioneer.py
    src/monaistream/__init__.py
    src/monaistream/_version.py
    .venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    # Don't complain if tests don't hit code:
    raise NotImplementedError
    if __name__ == .__main__.:
show_missing = True
skip_covered = True

[coverage:xml]
output = coverage.xml